tests/__snapshots__/validation-fixtureFileMatch-cannot-start-with-dot-dot-slash.snap.txt
Error: A 'fixtureFileMatch' pattern cannot start with '../'.

The files are only collected within the root directory.

  1 | {
  2 |   "fixtureFileMatch": [
  3 |     "../fixtures"
    |     ~~~~~~~~~~~~~
  4 |   ]
  5 | }
  6 | 

      at ./tstyche.json:3:5

